--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "stripe-easy-integration",
+  "name": "@adityasshinde/stripe-easy-integration",
   "version": "2.0.0",
   "description": "Integrate to stripe with ease of use",
   "main": "index.js",
